[tool.poetry]
name = "openapi-playground"
version = "0.1.0"
description = ""
authors = ["vonum <vonum.mk@gmail.com>"]
readme = "README.md"
packages = [{include = "openapi_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.304"
openai = "^0.28.1"
unstructured = "^0.10.16"
chromadb = "^0.4.13"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
